[tool.poetry]
name = "wefact-python"
version = "0.2.0"
description = "A Python wrapper for the WeFact API"
authors = ["Sjoerd Zaalberg van Zelst <hello@zzinnovate.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zzinnovate/wefact-python"
repository = "https://github.com/zzinnovate/wefact-python"
keywords = ["wefact", "api", "wrapper", "python"]

[tool.poetry.dependencies]
python = "^3.8"
requests = ">=2.26,<3.0"

[tool.poetry.dev-dependencies]
pytest = ">=8.4.1"
pytest-cov = ">=6.2.1"
pytest-mock = ">=3.14.1"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"