[tool.poetry]
name = "wefact-python"
version = "1.0.0b1"
description = "A Python wrapper for the WeFact API"
authors = ["Sjoerd Zaalberg van Zelst <hello@zzinnovate.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zzinnovate/wefact-python"
repository = "https://github.com/zzinnovate/wefact-python"
keywords = ["wefact", "api", "wrapper", "python"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = ">=2.26,<3.0"

[tool.poetry.packages]
include = "wefact"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0,<8.5.0"
pytest-cov = ">=5,<7.0"
pytest-mock = ">=3.0,<4.0"
python-dotenv = ">=1.0,<2.0"

[build-system]
requires = ["poetry-core>=1.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"