[project]
name = "wefact-python"
version = "1.0.0"
description = "A Python wrapper for the WeFact API"
authors = [{name = "Sjoerd Zaalberg van Zelst", email = "hello@zzinnovate.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = ["wefact", "api", "wrapper", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "requests>=2.26,<3.0",
]

[project.optional-dependencies]
cli = [
    "rich>=13.7.0",
    "textual>=0.47.0",
    "faker>=22.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0,<2.0",
]
dev = [
    "pytest>=8.3.0,<8.5.0",
    "pytest-cov>=5,<7.0",
    "pytest-mock>=3.14.1,<4.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.10.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
]
all = [
    "wefact-python[cli,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/zzinnovate/wefact-python"
Repository = "https://github.com/zzinnovate/wefact-python"

[project.scripts]
wefact-test = "wefact_cli.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wefact*", "wefact_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "*.egg",
    "examples",
    "wefact_cli",
]